8224636: CSS "pointer-events" property "stroke" is not respected for SVG renderings

Reviewed-by: arajkumar, kcr